[package]
name = "rust-postgresql"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/steph-mipt/rust-postgresql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
clap = { version = "3", features = ["derive"] }
config = "0.13"
tracing = "0.1.36"
log = "0.4.17"
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }